--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
       statusMsg.textContent = 'Durum: Başlatılıyor...';
       
       try {
-        const res = await fetch(${serverUrl}/start);
+        const response = await fetch(serverUrl + '/spectrum');
         if (!res.ok) throw new Error(res.statusText);
         
         const data = await res.json();
